kubernetes/game-service-green.yaml
# kubernetes/game-service-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-service-deployment-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: game-service
      version: green
  template:
    metadata:
      labels:
        app: game-service
        version: green # This pod gets the 'green' version label
    spec:
      containers:
      - name: game-service
        image: game-service:v6 # The new image version
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5001
