kubernetes/frontend.yaml
# kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: lugx-frontend
        image: lugx-frontend:v1 # We will build this image next
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80 # NGINX listens on port 80 by default
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
