kubernetes/game-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-service-deployment
spec:
  replicas: 2 # Let's run 2 copies for scalability
  selector:
    matchLabels:
      app: game-service
  template:
    metadata:
      labels:
        app: game-service
    spec:
      containers:
      - name: game-service
        image: game-service:v5 # Use the new image
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: game-service
spec:
  selector:
    app: game-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
