kubernetes/postgres-db.yaml
#deployment to run the container
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:14-alpine 
        ports:
        - containerPort: 5432 
        volumeMounts:
        - name: postgres-storage 
          mountPath: /var/lib/postgresql/data 
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc 

---
# a stable network address for the database
apiVersion: v1
kind: Service
metadata:
  name: postgres-db-service 
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
