kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lugx-gaming-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/games
        pathType: Prefix
        backend:
          service:
            name: game-service
            port:
              number: 5001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
